--- a/argocd/infra/backrest/deploy.yaml
+++ b/argocd/infra/backrest/deploy.yaml
@@ -29,7 +29,7 @@ spec:
                     values:
                       - marcus-server
       containers:
-        - image: garethgeorge/backrest:1.8.1@sha256:b680907d1255129a692ae13102dbd2c9dafa308d142582e16b41ecac66e145dd
+        - image: docker.io/garethgeorge/backrest:1.8.1@sha256:b680907d1255129a692ae13102dbd2c9dafa308d142582e16b41ecac66e145dd
           imagePullPolicy: IfNotPresent
           name: backrest
           env:
