--- a/argocd/immich/manifests/deploy.yaml
+++ b/argocd/immich/manifests/deploy.yaml
@@ -277,7 +277,7 @@ spec:
                 secretKeyRef:
                   name: immich-secrets
                   key: DB_PASSWORD
-          image: ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0@sha256:007a98749340534a0408a26435b1a0ab5ded76df788f897fdb6342c9c1b95448
+          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.2-pgvectors0.2.0
           imagePullPolicy: IfNotPresent
           livenessProbe:
             exec:
