--- a/argocd/infra/monitoring/influxdb/kustomization.yaml
+++ b/argocd/infra/monitoring/influxdb/kustomization.yaml
@@ -25,9 +25,9 @@ helmCharts:
         scripts: 
           init.iql: |+
             CREATE DATABASE "home"
-            CREATE RETENTION POLICY "2_years" ON "home" DURATION 2y REPLICATION 1 DEFAULT
+            CREATE RETENTION POLICY "2_years" ON "home" DURATION 730d REPLICATION 1 DEFAULT
             CREATE DATABASE "GarminStats"
-            CREATE RETENTION POLICY "2_years" ON "GarminStats" DURATION 2y REPLICATION 1 DEFAULT
+            CREATE RETENTION POLICY "2_years" ON "GarminStats" DURATION 730d REPLICATION 1 DEFAULT
       backup:
         enabled: false
         s3:
