add influx datasource to grafana2

--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -61,8 +61,8 @@ grafana:
     userKey: grafana-admin-user
     passwordKey: grafana-admin-password
   envFromSecrets:
-    - grafana-env-secrets
-    - influx-secrets
+    - name: grafana-env-secrets
+    - name: influx-secrets
   env:
     GF_AUTH_GENERIC_OAUTH_ENABLED: 'true'
     GF_AUTH_GENERIC_OAUTH_NAME: 'authentik'
