readd qbit netpol

--- a/argocd/media-server/qbittorrent/manifests/net-policy.yaml
+++ b/argocd/media-server/qbittorrent/manifests/net-policy.yaml
@@ -22,7 +22,7 @@ spec:
               kubernetes.io/metadata.name: sonarr
         - namespaceSelector:
             matchLabels:
-              kubernetes.io/metadata.name: istio-system
+              kubernetes.io/metadata.name: cilium
       ports:
         - protocol: TCP
           port: 8080
