test default influx

--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -94,6 +94,7 @@ grafana:
         uid: iota_influxdb
         type: influxdb
         access: proxy
+        isDefault: true
         url: http://influxdb:8086
         user: "${influxdb-user}"
         database: home
