--- a/argocd/garmin/manifests/dashboard.yaml
+++ b/argocd/garmin/manifests/dashboard.yaml
@@ -8,115 +8,6 @@ metadata:
 data:
   garmin-dashboard.json: |-
     {
-      "__inputs": [
-        {
-          "name": "DS_GARMIN_STATS",
-          "label": "Garmin Stats",
-          "description": "",
-          "type": "datasource",
-          "pluginId": "influxdb",
-          "pluginName": "InfluxDB"
-        }
-      ],
-      "__elements": {},
-      "__requires": [
-        {
-          "type": "panel",
-          "id": "barchart",
-          "name": "Bar chart",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "gauge",
-          "name": "Gauge",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "geomap",
-          "name": "Geomap",
-          "version": ""
-        },
-        {
-          "type": "grafana",
-          "id": "grafana",
-          "name": "Grafana",
-          "version": "12.0.1"
-        },
-        {
-          "type": "panel",
-          "id": "heatmap",
-          "name": "Heatmap",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "histogram",
-          "name": "Histogram",
-          "version": ""
-        },
-        {
-          "type": "datasource",
-          "id": "influxdb",
-          "name": "InfluxDB",
-          "version": "1.0.0"
-        },
-        {
-          "type": "panel",
-          "id": "marcusolsson-hourly-heatmap-panel",
-          "name": "Hourly heatmap",
-          "version": "2.0.1"
-        },
-        {
-          "type": "panel",
-          "id": "piechart",
-          "name": "Pie chart",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "stat",
-          "name": "Stat",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "state-timeline",
-          "name": "State timeline",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "table",
-          "name": "Table",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "text",
-          "name": "Text",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "timeseries",
-          "name": "Time series",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "trend",
-          "name": "Trend",
-          "version": ""
-        },
-        {
-          "type": "panel",
-          "id": "xychart",
-          "name": "XY Chart",
-          "version": ""
-        }
-      ],
       "annotations": {
         "list": [
           {
@@ -136,7 +27,7 @@ data:
       "editable": true,
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
-      "id": null,
+      "id": 1,
       "links": [],
       "panels": [
         {
@@ -153,6 +44,10 @@ data:
           "type": "row"
         },
         {
+          "fieldConfig": {
+            "defaults": {},
+            "overrides": []
+          },
           "gridPos": {
             "h": 3,
             "w": 3,
@@ -13872,6 +13767,7 @@ data:
           "type": "timeseries"
         }
       ],
+      "preload": false,
       "refresh": "5m",
       "schemaVersion": 41,
       "tags": [],
@@ -14160,6 +14056,18 @@ data:
             ],
             "query": "Europe/London, Europe/Paris, Europe/Berlin, Europe/Madrid, Europe/Rome, Europe/Amsterdam, Europe/Brussels, Europe/Zurich, Europe/Stockholm, Europe/Warsaw, Europe/Budapest, Europe/Istanbul, Europe/Athens, Europe/Moscow, America/New_York, America/Chicago, America/Denver, America/Los_Angeles, America/Toronto, America/Vancouver, America/Mexico_City, America/Sao_Paulo, America/Buenos_Aires, America/Lima, America/Bogota, Africa/Johannesburg, Africa/Cairo, Africa/Nairobi, Africa/Lagos, Asia/Tokyo, Asia/Seoul, Asia/Shanghai, Asia/Singapore, Asia/Kolkata, Asia/Bangkok, Asia/Dubai, Asia/Hong_Kong, Asia/Kuala_Lumpur, Asia/Jakarta, Asia/Manila, Asia/Taipei, Asia/Karachi, Asia/Colombo, Asia/Ho_Chi_Minh, Australia/Sydney, Australia/Melbourne, Australia/Brisbane, Australia/Perth, Pacific/Auckland, Pacific/Honolulu",
             "type": "custom"
+          },
+          {
+            "current": {
+              "text": "Garmin-InfluxDB",
+              "value": "garmin_influxdb"
+            },
+            "name": "DS_GARMIN_STATS",
+            "options": [],
+            "query": "influxdb",
+            "refresh": 1,
+            "regex": "/Garmin.*/",
+            "type": "datasource"
           }
         ]
       },
@@ -14171,6 +14079,5 @@ data:
       "timezone": "browser",
       "title": "Garmin Stats",
       "uid": "feiibsx498gsgb",
-      "version": 217,
-      "weekStart": ""
+      "version": 1
     }
