--- a/.github/workflows/argo-diff.yaml
+++ b/.github/workflows/argo-diff.yaml
@@ -22,7 +22,66 @@ jobs:
         with:
           ref: main
           path: main
+      - name: Write SOPS Secret
+        run: |
+          mkdir -p secrets
+          SOPS_KEY=$(echo "${{ secrets.SOPS_KEY }}" | base64 -w 0)
+          cat > secrets/secret-sops.yaml <<-EOF
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: sops-age
+            namespace: argocd
+          data:
+            key.txt: "${SOPS_KEY}"
+          EOF
 
+      - name: Write Kustomize SOPS Patch
+        run: |
+          cat > secrets/kustomize-sops-patch.yaml <<-EOF
+          apiVersion: apps/v1
+          kind: Deployment
+          metadata:
+            name: argocd-repo-server
+            namespace: argocd
+          spec:
+            template:
+              spec:
+                volumes:
+                  - name: custom-tools
+                    emptyDir: {}
+                  - name: sops-age
+                    secret:
+                      secretName: sops-age
+                initContainers:
+                  - name: install-ksops
+                    image: viaductoss/ksops:latest
+                    command: ["/bin/sh", "-c"]
+                    args:
+                      - echo "Installing KSOPS...";
+                        mv ksops /custom-tools/;
+                        mv kustomize /custom-tools/;
+                        echo "Done.";
+                    volumeMounts:
+                      - mountPath: /custom-tools
+                        name: custom-tools
+                containers:
+                  - name: argocd-repo-server
+                    env:
+                      - name: SOPS_AGE_KEY_FILE
+                        value: /.config/sops/age/key.txt
+                    volumeMounts:
+                      - mountPath: /usr/local/bin/kustomize
+                        name: custom-tools
+                        subPath: kustomize
+                      - mountPath: /usr/local/bin/ksops
+                        name: custom-tools
+                        subPath: ksops
+                      - mountPath: /.config/sops/age/key.txt
+                        name: sops-age
+                        subPath: key.txt
+            EOF
+            
       - name: Set Argo CD Custom Values
         run: |
           cat > values.yaml << "EOF"
@@ -40,10 +99,11 @@ jobs:
             -v $(pwd)/main:/base-branch \
             -v $(pwd)/pull-request:/target-branch \
             -v $(pwd)/output:/output \
+            -v $(pwd)/secrets:/secrets \
             -v $(pwd)/values.yaml:/argocd-config/values.yaml \
             -e TARGET_BRANCH=refs/pull/${{ github.event.number }}/merge \
             -e REPO=${{ github.repository }} \
-            dagandersen/argocd-diff-preview:v0.1.9
+            dagandersen/argocd-diff-preview:v0.1.10
 
       - name: Post diff as comment
         run: |
