--- a/.github/workflows/argo-diff.yaml
+++ b/.github/workflows/argo-diff.yaml
@@ -36,59 +36,90 @@ jobs:
             key.txt: "${SOPS_KEY}"
           EOF
 
-      - name: Write Kustomize SOPS Patch
-        run: |
-          cat > secrets/kustomize-sops-patch.yaml <<-EOF
-          apiVersion: apps/v1
-          kind: Deployment
-          metadata:
-            name: argocd-repo-server
-            namespace: argocd
-          spec:
-            template:
-              spec:
-                volumes:
-                  - name: custom-tools
-                    emptyDir: {}
-                  - name: sops-age
-                    secret:
-                      secretName: sops-age
-                initContainers:
-                  - name: install-ksops
-                    image: viaductoss/ksops:latest
-                    command: ["/bin/sh", "-c"]
-                    args:
-                      - echo "Installing KSOPS...";
-                        mv ksops /custom-tools/;
-                        mv kustomize /custom-tools/;
-                        echo "Done.";
-                    volumeMounts:
-                      - mountPath: /custom-tools
-                        name: custom-tools
-                containers:
-                  - name: argocd-repo-server
-                    env:
-                      - name: SOPS_AGE_KEY_FILE
-                        value: /.config/sops/age/key.txt
-                    volumeMounts:
-                      - mountPath: /usr/local/bin/kustomize
-                        name: custom-tools
-                        subPath: kustomize
-                      - mountPath: /usr/local/bin/ksops
-                        name: custom-tools
-                        subPath: ksops
-                      - mountPath: /.config/sops/age/key.txt
-                        name: sops-age
-                        subPath: key.txt
-            EOF
+      # - name: Write Kustomize SOPS Patch
+      #   run: |
+      #     cat > secrets/kustomize-sops-patch.yaml <<-EOF
+      #     apiVersion: apps/v1
+      #     kind: Deployment
+      #     metadata:
+      #       name: argocd-repo-server
+      #       namespace: argocd
+      #     spec:
+      #       template:
+      #         spec:
+      #           volumes:
+      #             - name: custom-tools
+      #               emptyDir: {}
+      #             - name: sops-age
+      #               secret:
+      #                 secretName: sops-age
+      #           initContainers:
+      #             - name: install-ksops
+      #               image: viaductoss/ksops:latest
+      #               command: ["/bin/sh", "-c"]
+      #               args:
+      #                 - echo "Installing KSOPS...";
+      #                   mv ksops /custom-tools/;
+      #                   mv kustomize /custom-tools/;
+      #                   echo "Done.";
+      #               volumeMounts:
+      #                 - mountPath: /custom-tools
+      #                   name: custom-tools
+      #           containers:
+      #             - name: argocd-repo-server
+      #               env:
+      #                 - name: SOPS_AGE_KEY_FILE
+      #                   value: /.config/sops/age/key.txt
+      #               volumeMounts:
+      #                 - mountPath: /usr/local/bin/kustomize
+      #                   name: custom-tools
+      #                   subPath: kustomize
+      #                 - mountPath: /usr/local/bin/ksops
+      #                   name: custom-tools
+      #                   subPath: ksops
+      #                 - mountPath: /.config/sops/age/key.txt
+      #                   name: sops-age
+      #                   subPath: key.txt
+      #       EOF
             
       - name: Set Argo CD Custom Values
         run: |
-          cat > values.yaml << "EOF"
-          # set whatever helm values you want
+          cat > values.yaml <<-EOF
           configs:
             cm:
               kustomize.buildOptions: --enable-helm --enable-alpha-plugins --enable-exec
+          repoServer:
+            env:
+              - name: SOPS_AGE_KEY_FILE
+                value: /.config/sops/age/key.txt
+            volumes:
+              - name: custom-tools
+                emptyDir: {}
+              - name: sops-age
+                secret:
+                  secretName: sops-age
+            initContainers:
+              - name: install-ksops
+                image: viaductoss/ksops:v4.3.3
+                command: ["/bin/sh", "-c"]
+                args:
+                  - echo "Installing KSOPS...";
+                    mv ksops /custom-tools/;
+                    mv kustomize /custom-tools/;
+                    echo "Done.";
+                volumeMounts:
+                  - mountPath: /custom-tools
+                    name: custom-tools
+            volumeMounts:
+              - mountPath: /usr/local/bin/kustomize
+                name: custom-tools
+                subPath: kustomize
+              - mountPath: /usr/local/bin/ksops
+                name: custom-tools
+                subPath: ksops
+              - mountPath: /.config/sops/age/key.txt
+                name: sops-age
+                subPath: key.txt
           EOF
 
       - name: Generate Diff
@@ -103,7 +134,7 @@ jobs:
             -v $(pwd)/values.yaml:/argocd-config/values.yaml \
             -e TARGET_BRANCH=refs/pull/${{ github.event.number }}/merge \
             -e REPO=${{ github.repository }} \
-            dagandersen/argocd-diff-preview:v0.1.10
+            dagandersen/argocd-diff-preview:v0.1.10 --debug
 
       - name: Post diff as comment
         run: |
