--- a/argocd/infra/app-set.yaml
+++ b/argocd/infra/app-set.yaml
@@ -15,6 +15,8 @@ spec:
   template:
     metadata:
       name: "{{path.basename}}-app"
+      annotations:
+        argocd-diff-preview/ignore: "true"
     spec:
       project: default
       syncPolicy:
