--- a/argocd/infra/cert-manager/manifests/resources.yaml
+++ b/argocd/infra/cert-manager/manifests/resources.yaml
@@ -42,6 +42,7 @@ spec:
               name: cloudflare-api-key
               key: api-key
 ---
+# Creates self-signed certificates (bootstrap issuer). Only used for creating root CA. Need something to sign the root CA
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -49,7 +50,7 @@ metadata:
 spec:
   selfSigned: {}
 ---
-# Root CA
+# Root CA. The trust anchor. Should probably go in vault
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
@@ -74,6 +75,7 @@ spec:
       dnsDomains:
         - yanello.net
 ---
+# Set up an issuer using the root CA. Used for making intermediate CAs
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
