--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -12,62 +12,60 @@ server:
       operator: "Exists"
       effect: "NoSchedule"
   standalone:
-    enabled: true
-  ha:
     enabled: false
-    replicas: 1
+  extraEnvironmentVars:
+    VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
+    VAULT_ADDR: https://localhost:8200
+  extraVolumes:
+    - type: secret
+      name: tls-server
+    - type: secret
+      name: vault-letsencrypt
+  ha:
+    enabled: true
+    replicas: 3
     raft:
       enabled: true
       setNodeId: true
-      # config: |
-      #   ui = true
-      #   cluster_name = "vault-integrated-storage"
-      #   listener "tcp" {
-      #     address = "[::]:8200"
-      #     cluster_address = "[::]:8201"
-      #     tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
-      #     tls_key_file = "/vault/userconfig/tls-server/tls.key"
-      #   }
-      #   storage "raft" {
-      #     path = "/vault/data"
-      #     retry_join {
-      #       leader_api_addr = "https://vault-0.vault-internal:8200"
-      #       leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
-      #       leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-      #       leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-      #     }
-      #     retry_join {
-      #       leader_api_addr = "https://vault-1.vault-internal:8200"
-      #       leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
-      #       leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-      #       leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-      #     }
-      #     retry_join {
-      #       leader_api_addr = "https://vault-2.vault-internal:8200"
-      #       leader_ca_cert_file = "/vault/userconfig/tls-ca/ca.crt"
-      #       leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-      #       leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-      #     }
-  # we need to define custom readiness/liveness Probe settings
-  readinessProbe:
-    enabled: true
-    path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
-  livenessProbe:
-    enabled: true
-    path: "/v1/sys/health?standbyok=true"
-    initialDelaySeconds: 60
-  # extraEnvironmentVars:
-  #   VAULT_CACERT: /vault/userconfig/tls-ca/ca.crt
-  # extraVolumes:
-  #   - type: secret
-  #     name: tls-server
-  #   - type: secret
-  #     name: tls-ca
-  #   - type: secret
-  #     name: kms-creds
+      config: |
+        ui = true
+        cluster_name = "vault-integrated-storage"
+        listener "tcp" {
+          address = "[::]:8200"
+          cluster_address = "[::]:8201"
+          tls_cert_file = "/vault/userconfig/vault-letsencrypt/tls.crt"
+          tls_key_file = "/vault/userconfig/vault-letsencrypt/tls.key"
+        }
+        storage "raft" {
+          path = "/vault/data"
+          retry_join {
+            leader_api_addr = "https://vault-0.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+          }
+          retry_join {
+            leader_api_addr = "https://vault-1.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+          }
+          retry_join {
+            leader_api_addr = "https://vault-2.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
+            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
+          }
+        } 
+  # readinessProbe:
+  #   enabled: true
+  #   path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
+  # livenessProbe:
+  #   enabled: true
+  #   path: "/v1/sys/health?standbyok=true"
+  #   initialDelaySeconds: 60
   auditStorage:
     enabled: true
-
 ui:
   enabled: true
   serviceType: "ClusterIP"
