--- a/argocd/infra/cilium/external/kustomization.yaml
+++ b/argocd/infra/cilium/external/kustomization.yaml
@@ -9,3 +9,6 @@ resources:
   - pikvm.yaml
   - router.yaml
   - ubiquiti.yaml
+
+commonAnnotations:
+  argocd.argoproj.io/group: "external-services"
