--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -48,6 +48,6 @@ bgpControlPlane:
 authentication:
   mutual:
     spire:
-      enabled: true
+      enabled: false
       install:
-        enabled: true
+        enabled: false
