--- a/argocd/vault/manifests/pki.yaml
+++ b/argocd/vault/manifests/pki.yaml
@@ -39,6 +39,10 @@ spec:
     - vault-1.vault-internal
     - vault-2.vault-internal
     - localhost
+    - vault
+    - vault.vault
+    - vault.vault.svc
+    - vault.vault.svc.cluster.local
   ipAddresses:
     - 127.0.0.1
   usages:
