--- a/argocd/infra/cilium/manifests/privateGateway.yaml
+++ b/argocd/infra/cilium/manifests/privateGateway.yaml
@@ -8,17 +8,17 @@ spec:
     - value: 10.10.8.100
       type: IPAddress
   listeners:
-    # - name: vault-tls-passthrough
-    #   protocol: TLS
-    #   hostname: "vault.yanello.net"
-    #   port: 443
-    #   tls:
-    #     mode: Passthrough
-    #   allowedRoutes:
-    #     namespaces:
-    #       from: All
-    #     kinds:
-    #       - kind: TLSRoute
+    - name: vault-tls-passthrough
+      protocol: TLS
+      hostname: "vault.yanello.net"
+      port: 443
+      tls:
+        mode: Passthrough
+      allowedRoutes:
+        namespaces:
+          from: All
+        kinds:
+          - kind: TLSRoute
     - name: http
       protocol: HTTP
       hostname: "*.yanello.net"
