--- a/argocd/infra/cilium/manifests/privateGateway.yaml
+++ b/argocd/infra/cilium/manifests/privateGateway.yaml
@@ -14,11 +14,11 @@ spec:
       port: 443
       tls:
         mode: Passthrough
-      allowedRoutes:
-        namespaces:
-          from: All
-        kinds:
-          - kind: TLSRoute
+      # allowedRoutes:
+      #   namespaces:
+      #     from: All
+      #   kinds:
+      #     - kind: TLSRoute
     - name: http
       protocol: HTTP
       hostname: "*.yanello.net"
