--- a/argocd/infra/cilium/manifests/privateGateway.yaml
+++ b/argocd/infra/cilium/manifests/privateGateway.yaml
@@ -18,8 +18,7 @@ spec:
         namespaces:
           from: All
         kinds:
-          - group: gateway.networking.k8s.io
-            kind: TLSRoute
+          - kind: TLSRoute
     - name: http
       protocol: HTTP
       hostname: "*.yanello.net"
