--- a/argocd/infra/cilium/manifests/privateGateway.yaml
+++ b/argocd/infra/cilium/manifests/privateGateway.yaml
@@ -19,65 +19,65 @@ spec:
           from: All
         kinds:
           - kind: TLSRoute
-    # - name: http
-    #   protocol: HTTP
-    #   hostname: "*.yanello.net"
-    #   port: 80
-    #   allowedRoutes:
-    #     namespaces:
-    #       from: All
-    #     kinds:
-    #       - kind: HTTPRoute
-    # - name: http-root
-    #   protocol: HTTP
-    #   hostname: "yanello.net"
-    #   port: 80
-    #   allowedRoutes:
-    #     namespaces:
-    #       from: All
-    #     kinds:
-    #       - kind: HTTPRoute
-    # - name: https
-    #   protocol: HTTPS
-    #   hostname: "*.yanello.net"
-    #   port: 443
-    #   tls:
-    #     mode: Terminate
-    #     certificateRefs:
-    #       - name: cilium-public
-    #   allowedRoutes:
-    #     namespaces:
-    #       from: All
-    #     kinds:
-    #       - kind: HTTPRoute
-    # - name: https-root
-    #   protocol: HTTPS
-    #   hostname: "yanello.net"
-    #   port: 443
-    #   tls:
-    #     mode: Terminate
-    #     certificateRefs:
-    #       - name: cilium-public
-    #   allowedRoutes:
-    #     namespaces:
-    #       from: All
-    #     kinds:
-    #       - kind: HTTPRoute
-# ---
-# apiVersion: gateway.networking.k8s.io/v1
-# kind: HTTPRoute
-# metadata:
-#   name: http-redirect-private # send http traffic to the https listener
-# spec:
-#   parentRefs:
-#     - name: cilium-private-gateway
-#       sectionName: http
-#   hostnames:
-#     - "*.yanello.net"
-#     - "yanello.net"
-#   rules:
-#     - filters:
-#         - type: RequestRedirect
-#           requestRedirect:
-#             scheme: https
-#             statusCode: 301
+    - name: http
+      protocol: HTTP
+      hostname: "*.yanello.net"
+      port: 80
+      allowedRoutes:
+        namespaces:
+          from: All
+        kinds:
+          - kind: HTTPRoute
+    - name: http-root
+      protocol: HTTP
+      hostname: "yanello.net"
+      port: 80
+      allowedRoutes:
+        namespaces:
+          from: All
+        kinds:
+          - kind: HTTPRoute
+    - name: https
+      protocol: HTTPS
+      hostname: "*.yanello.net"
+      port: 443
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - name: cilium-public
+      allowedRoutes:
+        namespaces:
+          from: All
+        kinds:
+          - kind: HTTPRoute
+    - name: https-root
+      protocol: HTTPS
+      hostname: "yanello.net"
+      port: 443
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - name: cilium-public
+      allowedRoutes:
+        namespaces:
+          from: All
+        kinds:
+          - kind: HTTPRoute
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: http-redirect-private # send http traffic to the https listener
+spec:
+  parentRefs:
+    - name: cilium-private-gateway
+      sectionName: http
+  hostnames:
+    - "*.yanello.net"
+    - "yanello.net"
+  rules:
+    - filters:
+        - type: RequestRedirect
+          requestRedirect:
+            scheme: https
+            statusCode: 301
