--- a/argocd/infra/cilium/manifests/privateGateway.yaml
+++ b/argocd/infra/cilium/manifests/privateGateway.yaml
@@ -17,8 +17,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: TLSRoute
+        # kinds:
+        #   - kind: TLSRoute
     - name: http
       protocol: HTTP
       hostname: "*.yanello.net"
@@ -26,8 +26,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: HTTPRoute
+        # kinds:
+        #   - kind: HTTPRoute
     - name: http-root
       protocol: HTTP
       hostname: "yanello.net"
@@ -35,8 +35,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: HTTPRoute
+        # kinds:
+        #   - kind: HTTPRoute
     - name: https
       protocol: HTTPS
       hostname: "*.yanello.net"
@@ -48,8 +48,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: HTTPRoute
+        # kinds:
+        #   - kind: HTTPRoute
     - name: https-root
       protocol: HTTPS
       hostname: "yanello.net"
@@ -61,8 +61,8 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-        kinds:
-          - kind: HTTPRoute
+        # kinds:
+        #   - kind: HTTPRoute
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
