--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -6,6 +6,7 @@ global:
     limits:
       memory: 512Mi
       cpu: 500m
+  tlsDisable: false
 server:
   tolerations:
     - key: "node-role.kubernetes.io/control-plane"
@@ -15,7 +16,9 @@ server:
     enabled: false
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
-    VAULT_ADDR: https://localhost:8200
+    # VAULT_API_ADDR: https://vault-active:8200
+    # VAULT_CLUSTER_ADDR: https://vault-active:8201
+    # VAULT_ADDR: https://localhost:8200
   extraVolumes:
     - type: secret
       name: tls-server
@@ -24,6 +27,8 @@ server:
   ha:
     enabled: true
     replicas: 3
+    #apiAddr: https://vault-active:8200
+    #clusterAddr: https://vault-active:8201
     raft:
       enabled: true
       setNodeId: true
@@ -31,42 +36,39 @@ server:
         ui = true
         cluster_name = "vault-integrated-storage"
         listener "tcp" {
-          address = "[::]:8200"
-          cluster_address = "[::]:8201"
+          address = "[::]:8202"
+          cluster_address = "[::]:8203"
           tls_cert_file = "/vault/userconfig/vault-letsencrypt/tls.crt"
           tls_key_file = "/vault/userconfig/vault-letsencrypt/tls.key"
         }
+        
+        listener "tcp" {
+          address = "[::]:8200"
+          cluster_address = "[::]:8201"
+          tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
+          tls_key_file = "/vault/userconfig/tls-server/tls.key"
+        }
+        
         storage "raft" {
           path = "/vault/data"
           retry_join {
-            leader_api_addr = "https://vault-0.vault-internal:8200"
-            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-          }
-          retry_join {
-            leader_api_addr = "https://vault-1.vault-internal:8200"
-            leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
-            leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
-          }
-          retry_join {
-            leader_api_addr = "https://vault-2.vault-internal:8200"
+            leader_api_addr = "https://vault-active:8200"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
         } 
-  # readinessProbe:
-  #   enabled: true
-  #   path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
-  # livenessProbe:
-  #   enabled: true
-  #   path: "/v1/sys/health?standbyok=true"
-  #   initialDelaySeconds: 60
+  readinessProbe:
+    enabled: true
+    path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
+  livenessProbe:
+    enabled: true
+    path: "/v1/sys/health?standbyok=true"
+    initialDelaySeconds: 60
   auditStorage:
     enabled: true
 ui:
   enabled: true
   serviceType: "ClusterIP"
-  externalPort: 8200
+  externalPort: 8202
+  targetPort: 8202
