--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -33,11 +33,17 @@ server:
         cluster_name = "vault-integrated-storage"
         listener "tcp" {
           address = "[::]:8200"
-          cluster_address = "[::]:8201"
           tls_cert_file = "/vault/userconfig/vault-letsencrypt/tls.crt"
           tls_key_file = "/vault/userconfig/vault-letsencrypt/tls.key"
         }
-        
+        listener "tcp" {
+          address = "[::]:8201"
+          cluster_address = "[::]:8201"
+          tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
+          tls_key_file = "/vault/userconfig/tls-server/tls.key"
+          tls_client_ca_file = "/vault/userconfig/tls-server/ca.crt"
+          tls_require_and_verify_client_cert = true
+        }
         storage "raft" {
           path = "/vault/data"
           retry_join {
