--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -13,8 +13,8 @@ server:
       effect: "NoSchedule"
   standalone:
     enabled: false
-  # extraEnvironmentVars:
-    # VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
+  extraEnvironmentVars:
+    VAULT_CACERT: /vault/userconfig/tls-server/ca.crt
     # VAULT_ADDR: https://localhost:8202
     # VAULT_CLUSTER_ADDR: https://localhost:8203
   extraVolumes:
