--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -33,7 +33,13 @@ server:
         cluster_name = "vault-integrated-storage"
         listener "tcp" {
           address = "[::]:8200"
-          cluster_address = "[::]:8201"
+          tls_cert_file = "/vault/userconfig/vault-letsencrypt/tls.crt"
+          tls_key_file = "/vault/userconfig/vault-letsencrypt/tls.key"
+        }
+        
+        # Cluster communication listener with internal cert
+        listener "tcp" {
+          address = "[::]:8201"
           tls_cert_file = "/vault/userconfig/tls-server/tls.crt"
           tls_key_file = "/vault/userconfig/tls-server/tls.key"
         }
@@ -41,19 +47,19 @@ server:
         storage "raft" {
           path = "/vault/data"
           retry_join {
-            leader_api_addr = "https://vault-0.vault-internal:8200"
+            leader_api_addr = "https://vault-0.vault-internal:8201"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
           retry_join {
-            leader_api_addr = "https://vault-1.vault-internal:8200"
+            leader_api_addr = "https://vault-1.vault-internal:8201"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
           retry_join {
-            leader_api_addr = "https://vault-2.vault-internal:8200"
+            leader_api_addr = "https://vault-2.vault-internal:8201"
             leader_ca_cert_file = "/vault/userconfig/tls-server/ca.crt"
             leader_client_cert_file = "/vault/userconfig/tls-server/tls.crt"
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
