--- a/argocd/vault/manifests/route.yaml
+++ b/argocd/vault/manifests/route.yaml
@@ -19,5 +19,5 @@ spec:
     - vault.yanello.net
   rules:
     - backendRefs:
-        - name: vault-active
-          port: 8200
+        - name: vault-ui
+          port: 8202
