update qbit vpn

--- a/argocd/media-server/qbittorrent/manifests/vpn-secrets.enc.yaml
+++ b/argocd/media-server/qbittorrent/manifests/vpn-secrets.enc.yaml
@@ -4,16 +4,12 @@ metadata:
     name: vpn-secrets
 type: Opaque
 stringData:
-    WIREGUARD_ENDPOINT_IP: ENC[AES256_GCM,data:GmuMm/V/L5fiQyKSrQ==,iv:szNweAZs6v7762NZugMeL2xFLFw1/CbQYmuaGibFjHA=,tag:nymB1/PUYfcaGqN7vzC0Hw==,type:str]
+    WIREGUARD_ENDPOINT_IP: ENC[AES256_GCM,data:+um6h9mcAab4B8FJpQ==,iv:lkYZxEy2LyuGJUi+LazIB/IEux/WiBVruUtIvF+RFT4=,tag:chG5iBr8gByTbbn1tCbN9Q==,type:str]
     WIREGUARD_ENDPOINT_PORT: ENC[AES256_GCM,data:8R42D68=,iv:pD88acUQAchMglljq0DWQhvPQLPxo/mdgTtKGOHtp3A=,tag:NeBFb0Ly3HCz3wHKLpun9w==,type:str]
-    WIREGUARD_PUBLIC_KEY: ENC[AES256_GCM,data:sXmpkqQl7myx7nAXXF9R2jeSwf4vjyw9hKeNLUrAQRvtGrY9WjA+ykMgHi0=,iv:2ahNRqkkraSzaRvmTPBpOOHQikwecYGzJV9vNBFf/78=,tag:pjgPVQexWtA3zTTmgpCJhQ==,type:str]
-    WIREGUARD_PRIVATE_KEY: ENC[AES256_GCM,data:KEPo4IDZoqisr+qh2ZW7nhp6aEDBPOSvvQGEDZxtzgyMN83xgaOa6SlCN08=,iv:UXrQfFXXPIMpFKCSpcdZ/cAhSu2/9ZU7Qqjd/p54ozI=,tag:UHXGvPEZodsYkWS6uBkYtA==,type:str]
+    WIREGUARD_PUBLIC_KEY: ENC[AES256_GCM,data:rN2elwQUVc+k40Frv88l0hyi8QHgIveLeIUD0ymZnCqi2WWW8HelwLRZhcI=,iv:gn2bCqO+Dh3kRfRVUCuV1lKBor+h9jGl3hXGfsntj7I=,tag:SXb2bxCAb0yp9J7n0qsBdg==,type:str]
+    WIREGUARD_PRIVATE_KEY: ENC[AES256_GCM,data:f7oH5rZq3KOs1S/dLotJ4tamXQRB0tHSGVkPXU/mqEL9iyClYHhSNYnvwR4=,iv:fdpsnHomBNkKXz2Vbu93GR3fc/rNcSceRi8pgU9EJl8=,tag:1BASeBzfkTY631cHmxeiPA==,type:str]
     WIREGUARD_ADDRESSES: ENC[AES256_GCM,data:pxpGUGYJvHnqcgg=,iv:wnfjKS0QJJH6QBPyxAKu3detbss2s4Z+yxgYbecv+fk=,tag:MRip5hnbdF7aicK0A0acOA==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1fd6r86ze2kzv9fey9y0jx47uekpkjsat76l2t6uesfhjpx7463cqtawww5
           enc: |
@@ -24,8 +20,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-27T02:42:01Z"
-    mac: ENC[AES256_GCM,data:GPfYVPonW9CGa0ft6txSFxQE3ch6JhySqsKkccO66eag+Nh54sst/baNqq9/V5G8kuU2yMvkcyrtejZRVwueF617yyxSJQoE+QMdo7x9z6+vYd203fnqRz8knZJUP3iu040LnBotO9u4GzkxwnoWOshCtAfz3myOp9eZ294gd5U=,iv:nn4R+5slfGMEPvbpvp0qGRN3HqpXqcDwWNCjbqQVets=,tag:GIr+xZEqEuCpHACydo+ZfA==,type:str]
-    pgp: []
+    lastmodified: "2025-06-26T12:59:51Z"
+    mac: ENC[AES256_GCM,data:FBIEVdrDXmLS3RFAP5lmAZm+m/9/wLb2bslHxaEWVcdPrfUktd6K+93uaxi3Tpub8JfYsgdccn0eW4v7Q3rhThU2Cnq4xSn8QA7fZo2shI/wQkR4wEr/IKGXtAAUeZCc8GQSfKL6xARJKJaa8Y606iI9MM6QPNJFlVlclAd//Pg=,iv:lhl464tRWjxB4EJJyKhS5mO1T67SoRYK5QxiwLlYR2o=,tag:PGHc6XoaNFRrPHbL3qPrcQ==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.1
+    version: 3.10.2
