setup oci vault config7

--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -37,7 +37,7 @@ server:
     - type: secret
       name: oci-config
   volumeMounts:
-    - mountpath: /home/vault/.oci
+    - mountPath: /home/vault/.oci
       name: config
 
   ha:
