setup oci vault config14

--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -43,8 +43,6 @@ server:
   ha:
     enabled: true
     replicas: 3
-    #apiAddr: https://vault-active:8200
-    #clusterAddr: https://vault-active:8201
     raft:
       enabled: true
       setNodeId: true
@@ -74,9 +72,9 @@ server:
             leader_client_key_file = "/vault/userconfig/tls-server/tls.key"
           }
         } 
-        # seal "ocikms" {
-        #   auth_type_api_key = "true"
-        # }
+        seal "ocikms" {
+          auth_type_api_key = "true"
+        }
   readinessProbe:
     enabled: true
     path: "/v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204"
