--- a/argocd/infra/cilium/manifests/publicGateway.yaml
+++ b/argocd/infra/cilium/manifests/publicGateway.yaml
@@ -8,6 +8,15 @@ spec:
     - value: 10.10.8.101 
       type: IPAddress
   listeners:
+    - name: argo-tls-passthrough
+      protocol: TLS
+      hostname: "argocd.yanello.net"
+      port: 443
+      tls:
+        mode: Passthrough
+      allowedRoutes:
+        namespaces:
+          from: All
     - name: http
       protocol: HTTP
       hostname: "*.yanello.net"
