rename secrets for oci

--- a/argocd/vault/manifests/secretGenerator.yaml
+++ b/argocd/vault/manifests/secretGenerator.yaml
@@ -7,5 +7,5 @@ metadata:
       exec:
         path: ksops
 files:
-  - ./manifests/ociEnvVars.yaml
-  - ./manifests/ociConfig.yaml
+  - ./manifests/ociEnvVars-secret.yaml
+  - ./manifests/ociConfig-secret.yaml
